# garmin-givemydata

./: .env.example  .gitignore  README.md  garmin_givemydata.py  pyproject.toml  requirements.txt  run_mcp.py  setup.bat  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  issue-welcome.yml  publish.yml  update-homebrew.yml
garmin_client/: __init__.py  client.py  endpoints.py
garmin_mcp/: db.py  export.py  import_json.py  parse_activity_files.py  server.py  sync.py
tests/: conftest.py  test_db_trackpoints.py  test_parse_activity_files.py
